# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import transactionsRouter from "./transactions";
+import dashboardRouter from "./dashboard";
+import inventoryRouter from "./inventory";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(transactionsRouter);
+router.use(dashboardRouter);
+router.use(inventoryRouter);
 
 export default router;
